experience label alignment fixes

--- a/src/app/profile/experience/experience.component.css
+++ b/src/app/profile/experience/experience.component.css
@@ -12,6 +12,7 @@
 .experience_row input[type=text]:disabled+label
 {
     color:#ABEBE6;
+    margin-top: -1.7rem;
 }
 
 .experience_row input[mkbTextWeight=large]
